moved notation to appendix; fixed various superficial typos and TODOs

--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -38,11 +38,6 @@ Bristol, BS8 1UB, United Kingdom.\\
 \import{./specification/}{bg-compatibility.tex}
 \import{./specification/}{bg-feature.tex}
 
-\section{Notation}
-\label{sec:notation}
-
-\import{./specification/}{notation.tex}
-
 \section{Specification}
 \label{sec:spec}
 
@@ -60,16 +55,10 @@ Bristol, BS8 1UB, United Kingdom.\\
 \appendix
 
 \clearpage
-\section{Instruction syntax   overview}
-\label{appx:instr_syntax}
+\section{Notation}
+\label{appx:notation}
 
-\import{./specification/}{appx-instr_syntax.tex}
-
-\clearpage
-\section{Instruction encoding overview} 
-\label{appx:instr_encode}
-
-\import{./specification/}{appx-instr_encode.tex}
+\import{./specification/}{appx-notation.tex}
 
 \clearpage
 \section{Related work}
@@ -82,6 +71,18 @@ Bristol, BS8 1UB, United Kingdom.\\
 \label{appx:design}
 
 \import{./specification/}{appx-design.tex}
+
+\clearpage
+\section{Instruction syntax   overview}
+\label{appx:instr_syntax}
+
+\import{./specification/}{appx-instr_syntax.tex}
+
+\clearpage
+\section{Instruction encoding overview} 
+\label{appx:instr_encode}
+
+\import{./specification/}{appx-instr_encode.tex}
 
 % =============================================================================
 
