--- a/docs/specification/appx-design.tex
+++ b/docs/specification/appx-design.tex
@@ -73,7 +73,7 @@
       $64$-, or $128$-bit $\GPR$ register file (and so also address space). 
       The same concept is useful wrt. the co-processor, and indeed, for the
       multi-precision operations
-      (per \REFSEC{sec:spec:instr:2:5})
+      (per \REFSEC{sec:spec:instruction:2:4},
       in particular.
 
       The current design considers sub-{\em byte} (e.g., $4$-bit), sub-word
@@ -83,7 +83,7 @@
       and $\XCR$ register file word sizes are {\em both} $32$ bits.
 
 \item Consider a general case, wherein a given ISA has instruction formats
-      to allow access to $n$ general-purpose registers, st. 
+      that allow access to $n$ general-purpose registers, st. 
       $
       n = s + d
       $ 
