--- a/docs/specification/appx-notation.tex
+++ b/docs/specification/appx-notation.tex
@@ -71,7 +71,7 @@
 \item Where appropriate, a sequence $x$ of $n$ bits can be interpreted as an
       element of the polynomial ring $\B{F}_2[\IND{x}]$
       (i.e. a binary polynomial);
-      the $i$-bit of $x$ is the $i$-th coefficient, meaning
+      the $i$-bit of $x$ basically represents the $i$-th coefficient, st.
       $
       x \mapsto x( \IND{x} )
       $
