--- a/docs/specification/bg-guarantee.tex
+++ b/docs/specification/bg-guarantee.tex
@@ -15,7 +15,7 @@
       A similar argument can obviously be made in relation to the platform 
       on which resulting software is executed.
 
-      The specification of \XCID guarantees to excludes all
+      The specification of \XCID guarantees to exclude all
                    undefined 
       and
       implementation defined
@@ -43,7 +43,7 @@
       } (see, e.g., Page $10$ re. ``the rise of side-channels '').
       However, it seems unclear\footnote{
       \url{http://twitter.com/Kensan42/status/946681596001902593}
-      } {\em why}, the original\footnote{
+      } {\em why} the original\footnote{
       \url{http://web.archive.org/web/20171108010153/http://community.arm.com/processors/b/blog/posts/introducing-2017s-extensions-to-the-arm-architecture}
       } announcement was later amended to remove this feature\footnote{
       \url{http://community.arm.com/processors/b/blog/posts/introducing-2017s-extensions-to-the-arm-architecture}
