--- a/docs/specification/spec-exception.tex
+++ b/docs/specification/spec-exception.tex
@@ -20,8 +20,7 @@ the following:
       illegal instruction exception.
 \item Any attempt to execute a
         valid \XCID instruction
-      from an unsupported feature class (or parameterisation thereof, cf. packed operations)
-      (per fields in $\SPR{XCSR}$) 
+      from an unsupported feature class (or parameterisation thereof, cf. packed operations, per fields in $\SPR{XCSR}$)
       will cause an 
       illegal instruction exception.
 \item Any access to the 
