--- a/docs/specification/intro.tex
+++ b/docs/specification/intro.tex
@@ -1,17 +1,18 @@
 % =============================================================================
 
-Versus a general case, cryptographic workloads are challenging in that they
-typically
+Versus a more general case, cryptographic workloads are a challenge in the
+sense they typically
 a) require computationally intensive, somewhat niche functionality,
    and
 b) form a central target in what is a complex, evolving attack surface.
-The former is a particular issue, in the sense cryptography is typically an
-enabling technology vs. a feature, so, from the perspective of the user,
-it represents pure overhead.  Efficiency is a goal in and of itself then, 
-but also as an enabler for security; one cannot (or at least {\em should} 
-not) compromise security to meet efficiency requirements, and so delivering
-higher efficiency can be pitched as an enabler for countermeasures against 
-attack (since there is more margin within which to do so).
+The former is a particular issue, because cryptography normally represents
+an enabling technology vs. a feature: put another way, it will represent
+overhead when viewed from the perspective of a user.  Efficiency is hence 
+a goal in and of itself, but {\em also} as an enabler for security.  This 
+is because one cannot (or at least should not) compromise security to meet 
+efficiency requirements, so delivering higher efficiency can be pitched as 
+an enabler for countermeasures against attack (since there will be more 
+margin within which to do so).
 
 This document acts as the specification for a 
 greenfield, non-standard extension~\cite[Section 21.1]{SCARV:RV:ISA:I:17} 
@@ -23,21 +24,21 @@ base ISA, which we dub \XCID; it forms an output from the SCARV\footnote{
 \url{http://gow.epsrc.ac.uk/NGBOViewGrant.aspx?GrantRef=EP/R012288/1}
 } as part of the UK-based RISE\footnote{
 \url{http://www.ukrise.org}
-} initiative.
-The \XCID ISE aims to support software implementations of both symmetric and 
-asymmetric cryptographic primitives.  By analogy, one could view this remit
-as similar to that of a floating-point co-processor, but focused on support
-for cryptography: per the above, it aims to enable
+} initiative.  
+\XCID aims to enable
 a) efficient
    and
 b) secure
-execution of said implementations.
+software implementation of cryptographic primitives, within a remit which
+is conceptually analogous to that of a floating-point co-processor.
 
 Note this document {\em is} a specification for \XCID, but categorically
 {\em is not} an implementation guide: we provide a separate document for 
 that purpose.  In order to avoid the specification becoming too verbose,
-we defer coverage of related work and detailed design notes to
-\REFAPPX{appx:related}
+we defer a detailed description of the notation used, related work, and 
+design notes to
+\REFAPPX{appx:notation},
+\REFAPPX{appx:related},
 and
 \REFAPPX{appx:design}
 respectively.  The document, and project as a whole, follows a semantic 
