refixed issue with xc.bop description

--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -325,9 +325,9 @@
   operands.  The function $f$ is specified as a truth-table encoded as the
   immediate \VERB[RV]{lut4}: given
   \[
-  \begin{array}{|cc|c}
+  \begin{array}{|cc|c|}
   \hline
-  \multicolumn{3}{c}{$f$}       \\
+  \multicolumn{3}{|c|}{f}     \\
   \hline
   x_i & y_i & r_i               \\
   \hline
