tweaked title to match repo.

--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -2,7 +2,7 @@
 
 \usepackage{shared} \addbibresource{shared.bib}
 
-\title{RISC-V \XCID ISE Reference Implementation}
+\title{{\sc \XCID: a cryptographic ISE for RISC-V} \\ {\sc\large Reference Implementation Document}}
 \date{Version $0.9.0$ (\today)}
 \author{Ben Marshall}
 \author{Daniel Page}
