--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -1,10 +1,8 @@
 \documentclass{article}
 
-\usepackage{shared} \addbibresource{shared.bib}
+\usepackage{shared} \addbibresource{shared.bib} \import{../work/}{crypto-ise.encodings.tex}
 
-\import{../work/}{crypto-ise.encodings.tex}
-
-\title{RISC-V \XCID ISE Specification}
+\title{{\sc \XCID: a cryptographic ISE for RISC-V} \\ {\sc\large Specification Document}}
 \date{Version $0.9.0$ (\today)}
 \author{Ben Marshall}
 \author{Daniel Page}
