Bugfix for xc.msub.3
- Fixes #48
- Instruction was sourcing entirety of crs3 operand, but should
  only have sourced least significant bit.

 On branch dev/mpn-examples
 Changes to be committed:
	modified:   docs/implementation.tex
	modified:   rtl/coprocessor/scarv_cop_malu.v
	modified:   verif/formal/fml_chk_instr_msub_3.v

--- a/docs/implementation.tex
+++ b/docs/implementation.tex
@@ -738,7 +738,7 @@ instruction execution.
 {\tt xc.msub.3 }&
    $tmp \ASN crs1 - crs2$ \newline
  &
-   $tmp \ASN tmp - crs3$ \newline
+   $tmp \ASN tmp - crs3[0]$ \newline
    $rdm0\ASN tmp[31:0]$ 
  & $rdm1\ASN tmp[63:32]$ 
 \\
