Fix #60 - xc.gather.b instruction operands
- Fix binutils / assembler mismatch with specification for how
  to write operands of scatter/gather instructions.
- Change syntax to use standard `OP rd, offset(base)` syntax

Syntax is now:

```
xc.gather.b crd, crs2(rs1)
xc.gather.h crd, crs2(rs1)
xc.scatter.b crd, crs2(rs1)
xc.scatter.h crd, crs2(rs1)
```

 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   docs/specification/spec-instruction.tex
	modified:   external/riscv-binutils-gdb-2.30.patch
	modified:   verif/unit/15-gather-b.S
	modified:   verif/unit/16-scatter-b.S
	modified:   verif/unit/17-gather-h.S
	modified:   verif/unit/18-scatter-h.S

--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -200,7 +200,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.scatter.b}{crd, rs2, crs2}{
+\XCINSTR{xc.scatter.b}{crd, crs2(rs1)}{
   Perform a ``scattered'' store of 
   four     bytes 
   from an $\XCR$ register
@@ -223,7 +223,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.scatter.h}{crd, rs2, crs2}{
+\XCINSTR{xc.scatter.h}{crd, crs2(rs1)}{
   Perform a ``scattered'' store of 
   two  halfwords
   from an $\XCR$ register
@@ -244,7 +244,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.gather.b}{crd, rs1, crs2}{
+\XCINSTR{xc.gather.b}{crd, crs2(rs1)}{
   Perform a  ``gathered''  load of 
   four     bytes 
   from memory 
@@ -267,7 +267,7 @@
 
 % -----------------------------------------------------------------------------
 
-\XCINSTR{xc.gather.h}{rd, rs1, crs2}{
+\XCINSTR{xc.gather.h}{crd, crs2(rs1)}{
   Perform a  ``gathered''  load of 
   two  halfwords
   from memory 
