Draft sbox instruction specification
- See #52

 On branch dev/sbox-instr
 Changes to be committed:
	modified:   docs/ise-opcodes.txt
	modified:   docs/specification/appx-instr_encode.tex
	modified:   docs/specification/appx-instr_syntax.tex
	modified:   docs/specification/spec-instruction.tex

--- a/docs/specification/appx-instr_encode.tex
+++ b/docs/specification/appx-instr_encode.tex
@@ -70,6 +70,7 @@
 \XCENCODE{xc.ins}           
 \XCENCODE{xc.mix.l}         
 \XCENCODE{xc.mix.h}         
+\XCENCODE{xc.sbox.4}           
 \end{bytefield}
 \end{center}
 \caption{An overview of instruction encoding: class $2.3$, per \REFSEC{sec:spec:instruction:2:3}.}
