--- a/docs/specification/appx-instr_syntax.tex
+++ b/docs/specification/appx-instr_syntax.tex
@@ -75,6 +75,7 @@ Class                 & Syntax                     & Section                    
                       & \XCSYNTAXUSE{xc.ins}       & \REFSEC{sec:spec:instruction:xc.ins}       \\
                       & \XCSYNTAXUSE{xc.mix.l}     & \REFSEC{sec:spec:instruction:xc.mix.l}     \\
                       & \XCSYNTAXUSE{xc.mix.h}     & \REFSEC{sec:spec:instruction:xc.mix.h}     \\
+                      & \XCSYNTAXUSE{xc.sbox.4}    & \REFSEC{sec:spec:instruction:xc.sbox.4}    \\
 \hline                                                                             
 \end{tabular}
 \end{center}
