--- a/docs/specification/spec-instruction.tex
+++ b/docs/specification/spec-instruction.tex
@@ -435,6 +435,39 @@
   }
 }
 
+
+% -----------------------------------------------------------------------------
+
+
+\XCINSTR{xc.sbox.4}{crd, crs1, crs2, crs3}{
+    Apply an arbitrary 4-bit S-Box to the contents of 
+    $\XCR[*][{\VERB[RV]{crs1}}]$,
+    placing the result in
+    $\XCR[*][{\VERB[RV]{crd}}]$.
+    The S-Box is specified by the concatenation of
+    $\XCR[*][{\VERB[RV]{crs2}}]$ and $\XCR[*][{\VERB[RV]{crs3}}]$
+    where
+    \[
+        sbox[i] = \INDEX[4]{{
+            (\XCR[*][{\VERB[RV]{crs3}}] \CONS \XCR[*][{\VERB[RV]{crs2}}])
+        }}{i}
+    \]
+    for each $0 \leq i < 15$.
+
+    For example, if 
+    $\XCR[*][{\VERB[RV]{crs2}}] = 0xABCD1234$
+    and
+    $\XCR[*][{\VERB[RV]{crs3}}] = 0x456789EF$
+    then $sbox[0] = 4$, $sbox[1] = 3,$
+    $sbox[7] = A$ and $sbox[8] = F$.
+}{
+    \For{$i=0$ {\bf upto} $15$}{
+        \INDEX[4]{\XCR[*][{\VERB[RV]{crd}}]}{i} = sbox[
+             \INDEX[4]{\XCR[*][{\VERB[RV]{crs1}}]}{i}        
+            ]
+    }
+}
+
 % =============================================================================
 
 \subsubsection{Class-$2.4$: packed}
